--- a/nodule_detection_module.ipynb
+++ b/nodule_detection_module.ipynb
@@ -19,9 +19,9 @@
         "id": "PGyx3uTefjTD"
       },
       "source": [
-        "# Name: 이운규\n",
+        "# Name: Wooky\n",
         "\n",
-        "#ID: 2016320145\n",
+        "#ID: not showns\n",
         "\n",
         "Link to your assignment2 colab: https://colab.research.google.com/drive/1pfwURA7_x7pzVM_FaODLueFK5A3JApeW?usp=sharing\n",
         "\n",
