--- a/training_weights_ML.ipynb
+++ b/training_weights_ML.ipynb
@@ -19,9 +19,9 @@
         "id": "Hdw9Mbe07jHN"
       },
       "source": [
-        "Name: 이운규\n",
+        "Name: wooky\n",
         "\n",
-        "ID: 2016320145\n",
+        "ID: not shown\n",
         "\n",
         "Link to your midterm project: https://colab.research.google.com/drive/1_ShNVJovC-oJ4nq52ObupMA0eo8geetV?usp=sharing\n",
         "\n",
