--- a/assignment2_evaluation_2016320145.ipynb
+++ b/assignment2_evaluation_2016320145.ipynb
@@ -20,9 +20,9 @@
         "id": "NgKDr1L2SkwW"
       },
       "source": [
-        "#Name: 이운규\n",
+        "#Name: wooky\n",
         " \n",
-        "#ID: 2016320145\n",
+        "#ID: not shown\n",
         " \n",
         "Link to your assignment 2 Colab: https://colab.research.google.com/drive/1pfwURA7_x7pzVM_FaODLueFK5A3JApeW?usp=sharing\n",
         " \n",
